# xql

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
mysql/: Cargo.toml
mysql/src/: lib.rs
postgres/: Cargo.toml
postgres/src/: lib.rs
sqlite/: Cargo.toml
sqlite/src/: lib.rs
src/: clause.rs  exec.rs  expr.rs  func.rs  item.rs  lib.rs  macros.rs  ops.rs  schema.rs  table_expr.rs  utils.rs  value.rs
src/backend/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
src/blanket/: expr.rs  mod.rs  stmt.rs  table_expr.rs
src/exec/: bind.rs  mod.rs
src/stmt/: binary.rs  data.rs  delete.rs  insert.rs  mod.rs  result.rs  select.rs  update.rs  values.rs
tests/: derive.rs  mysql.rs  postgres.rs  sqlite.rs
