[workspace]
members = [
    ".",
    "postgres",
    "mysql",
    "sqlite",
]

[package]
name = "xql"
version = "0.2.1"
readme = "README.md"
edition = "2021"
description = "SQL query builder"
homepage = "https://github.com/arch-mage/xql"
repository = "https://github.com/arch-mage/xql"
documentation = "https://docs.rs/xql"
license = "GPL-3.0-or-later"
keywords = ["database", "sqlx", "postgres", "mysql", "sqlite"]
categories = ["database"]
authors = ["M. Awad Syahid <m.awad.syahid@gmail.com>"]

[package.metadata.docs.rs]
features = ["postgres", "mysql", "sqlite"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
postgres = ["sqlx", "xql-sqlx-postgres"]
mysql = ["sqlx", "xql-sqlx-mysql"]
sqlite = ["sqlx", "xql-sqlx-sqlite"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls"]
optional = true

[dependencies.xql-sqlx-postgres]
path = "postgres"
version = "0.2.0"
optional = true

[dependencies.xql-sqlx-mysql]
path = "mysql"
version = "0.2.0"
optional = true

[dependencies.xql-sqlx-sqlite]
path = "sqlite"
version = "0.2.0"
optional = true

[dev-dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "mysql", "sqlite"]

[dev-dependencies.tokio]
version = "1.17"
default-features = false
features = ["rt-multi-thread", "macros"]

[[test]]
name = "postgres"
path = "tests/postgres.rs"
required-features = ["postgres"]

[[test]]
name = "mysql"
path = "tests/mysql.rs"
required-features = ["mysql"]

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]
