[package]
name = "xql"
version = "0.2.2"
readme = "README.md"
edition = "2021"
description = "SQL query builder"
homepage = "https://github.com/arch-mage/xql"
repository = "https://github.com/arch-mage/xql"
documentation = "https://docs.rs/xql"
license = "GPL-3.0-or-later"
keywords = ["database", "sqlx", "postgres", "mysql", "sqlite"]
categories = ["database"]
authors = ["M. Awad Syahid <m.awad.syahid@gmail.com>"]

[package.metadata.docs.rs]
features = ["postgres", "mysql", "sqlite"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
use-chrono = ["sqlx/chrono", "chrono"]
use-decimal = ["sqlx/decimal", "rust_decimal"]

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls"]
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
optional = true

[dependencies.rust_decimal]
version = "1.22"
default-features = false
optional = true

[dev-dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres", "mysql", "sqlite"]

[dev-dependencies.tokio]
version = "1.17"
default-features = false
features = ["rt-multi-thread", "macros"]

[[test]]
name = "postgres"
path = "tests/postgres.rs"
required-features = ["postgres"]

[[test]]
name = "mysql"
path = "tests/mysql.rs"
required-features = ["mysql"]

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]
