[package]
name = "xql-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "parsing", "proc-macro"]

[dependencies.quote]
version = "1.0"
default-features = false

[dependencies.convert_case]
version = "0.5"
default-features = false
