[package]
name = "xql-derive"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "xql derive macro"
homepage = "https://github.com/arch-mage/xql"
repository = "https://github.com/arch-mage/xql"
documentation = "https://docs.rs/xql"

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0"
default-features = false
features = ["derive", "parsing", "proc-macro"]

[dependencies.quote]
version = "1.0"
default-features = false

[dependencies.convert_case]
version = "0.5"
default-features = false
